These are the changes that I have done. Ingeneral I think even debugging the coe and checking on how it works in MVTAC can be very useful at home. Do this at home to make sure you gain more experience. To be honest what I want to try to work on it at home

--- a/configs.yaml
+++ b/configs.yaml
@@ -2,8 +2,8 @@ EXP_NAME: MemSeg
 SEED: 42
 
 DATASET:
-  datadir: /datasets/MVTec
-  texture_source_dir: /datasets/dtd/images
+  datadir: D:\datasets\mvtec
+  texture_source_dir: D:\datasets\dtd-r1.0.1\dtd\images
   anomaly_mask_info: ./anomaly_mask.json
   target: null
   resize: 
