--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+.ipynb_checkpoints/*
 
 # IPython
 profile_default/
@@ -142,5 +142,5 @@ cython_debug/
 
 # results
 *.pt
-wandb/
+wandb/*
 .idea/*
